# npmGuardian

./: .gitignore  package-lock.json  package.json  push_error.txt  push_stderr.txt  push_stderr_utf8.txt  verify_build.ps1  verify_build.sh
ai-detection/: __init__.py  requirements.txt
ai-detection/api/: main.py
ai-detection/models/: __init__.py  obfuscation.py
backend/: .env.example  package.json  supabase_schema.sql  tsconfig.json
backend/src/: index.ts  test-supabase.ts
backend/src/api/: routes.ts
backend/src/api/controllers/: authController.ts  scanController.ts
backend/src/lib/: supabaseClient.ts
backend/src/services/: oauthService.ts  scanService.ts
cli/: package.json
cli/src/: index.ts
cli/src/commands/: login.ts  scan.ts  tree.ts
docker/: docker-compose.yml
docker/monitor/: Dockerfile  sysdig-rules.yaml  worker.js
docs/: api-specification.md  architecture.md  cli-design.md  codebase-structure.md  contributing.md  database-schema.md  deployment-ci-cd.md  security-algorithms.md
frontend/: package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DependencyGraph.tsx  RiskCard.tsx
scanner-engine/: Cargo.toml
scanner-engine/src/: ast_visitor.rs  deps_graph.rs  lib.rs
