[package]
name = "npm-guardian-scanner"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust static analysis engine for npm-Guardian"

[dependencies]
swc_ecma_parser = "0.134.1"
swc_common = "0.32.0"
swc_ecma_ast = "0.104.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
petgraph = "0.6.3" # For dependency DAG resolution
